# nya

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
assets/playbooks/: build_control_plane.yml  build_nodes.yml  db.lab.j2  named.conf.local.j2  post_build.yml  validate_cluster.yml
context/: inventory.yaml  nya_test_context.json
schemas/: core.json  test.json
src/: args.rs  cli.rs  core.rs  defaults.rs  embedded.rs  external.rs  lib.rs  main.rs  runtime.rs  utils.rs
src/cli/: base.rs  capsule.rs  init.rs  pack.rs  ship.rs
src/cli/base/: build.rs
src/core/: checks.rs  context.rs  core_schema.json  core_services.rs  event.rs  event_bus.rs  handler.rs  mod.rs  payload.rs  planner.rs  registry.rs  runtime.rs  schema.rs  service.rs  task_tracker.rs
src/core/core_services/: nya_base.rs  nya_core.rs  nya_ship.rs
src/core_services/: mod.rs  nya_core.rs  nya_service.rs
src/core_services/ansible_service/: ansible.rs  mod.rs
src/core_services/nya_base/: mod.rs  nya_base.rs
src/embedded/: core_schema.json
src/embedded/helm/: Chart.yaml  backend.yaml  deployment.yaml  frontend.yaml
src/embedded/playbooks/base_build/: build_nodes.yml  (+4 more)
src/mod/: event_bus.rs
src/ops/: mod.rs  types.rs  utils.rs
src/ops/base/: mod.rs
src/ops/base_build/: mod.rs  types.rs  utils.rs
src/ops/init/: initial_config.json
src/ops/pack/: Dockerfile  values.backend.yaml  values.frontend.yaml  values.fullstack.yaml
src/ops/ship/: mod.rs
src/runtime/: mod.rs  nya.rs
tests/: nya_base_config.json  nya_test_capsule.json
tests/cli/: nya_base_config.json
tests/cli/.nya/: nya.json
tests/cli/testing-be/: Dockerfile  index.js  values.yaml
tests/cli/testing-fe/: Dockerfile  index.html  values.yaml
tests/context/: nya_test_context.json
tests/delete/.nya/: nya.json
tests/delete/delete-me/: values.yaml
tests/delete/testing/: values.yaml
tests/e2e/: context.json
tests/e2e/.nya/: nya.json
tests/e2e/be/: index.js  package-lock.json  package.json  values.yaml
tests/e2e/fe/: index.html  values.yaml
tests/integration/.nya/: nya.json
tests/unit/core/: service.rs
(+18 files in other folders)
