[package]
name = "nya"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
futures = "0.3.31"
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "io-util"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
