[package]
name = "nya"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.31"
include_dir = "0.7.4"
inquire = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.24.0"
tera = "1.20.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "io-util"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
