[package]
name = "nya_cloud"
version = "0.1.1"
edition = "2024"
authors = ["Christopher Smith <input@cybrsmth.com>"]
license = "Apache-2.0"
description = "Self-hosted PaaS for deploying apps to your own servers"
repository = "https://github.com/NyaOps/nya"
keywords = ["paas", "kubernetes", "self-hosted", "deployment", "homelab"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nya"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.31"
include_dir = "0.7.4"
inquire = "0.9.2"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["preserve_order"] }
shellexpand = "3.1.1"
tempfile = "3.24.0"
tera = "1.20.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time", "sync", "process", "io-util"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
